@startuml
title Step 5 - Resource Instance State Machine

hide empty description

state "Planned\n(PLANNED)" as PLANNED
state "Provisioning\n(PROVISIONING)" as PROVISIONING
state "Ready\n(READY)" as READY
state "Failed\n(FAILED)" as FAILED
state "Destroyed\n(DESTROYED)" as DESTROYED
state "Unlinked\n(UNLINKED)" as UNLINKED

[*] --> PLANNED : planInfrastructureChanges [MANAGED create] /\nresolve Resource Definition, owner key and target
[*] --> READY : reconcileInfrastructure [EXISTING link] /\nlink owner instance to the existing resource\n(shared resource or internal cluster);\nno provisioning, real infrastructure untouched

PLANNED --> PROVISIONING : reconcileInfrastructure [MANAGED create or update] /\ninvoke provisioner apply
PROVISIONING --> READY : provisioner apply success /\npersist infrastructure and provider-state references
PROVISIONING --> FAILED : provisioner apply failure /\npersist actual provider state and failure status

READY --> PLANNED : planInfrastructureChanges [MANAGED update: current input differs\nfrom applied_input_fingerprint] / retain Resource Instance identity
READY --> PLANNED : propagateOutputChanges [MANAGED; output of a required\nplatform requirement changed] / reconcile again in a later wave
READY --> READY : reconcileInfrastructure [reuse] /\nconfirm or refresh provider state
READY --> READY : collectResourceOutputs; propagateOutputChanges /\nexpose transient Resource Output values; update output_fingerprint

READY --> DESTROYED : reconcileInfrastructure [MANAGED, not in deployed version] /\ninvoke provisioner destroy
FAILED --> DESTROYED : reconcileInfrastructure [MANAGED, not in deployed version] /\ninvoke provisioner destroy
READY --> UNLINKED : reconcileInfrastructure [EXISTING, not in deployed version] /\nremove the link only; real infrastructure untouched

DESTROYED --> [*]
UNLINKED --> [*]

note right of PLANNED
  For create, planning precedes creation of the durable row.
  The Resource Instance is persisted when provider state and an
  infrastructure reference exist; PLANNED still names the
  lifecycle phase/status defined by the infrastructure plan.
  Lookup always uses the owner key: application + environment
  + requirement (Resource Requirement or Platform Requirement,
  stable ID) + deployment target. Cluster and network of a cloud
  target follow the same lifecycle as any MANAGED resource.
end note

note right of READY
  Reuse is a reconciliation decision/transition, not a separate
  Resource Instance status. Resource Output remains TRANSIENT;
  only output_fingerprint is stored.
  Instances of an EXISTING (shared) definition never invoke
  provisioner apply or destroy.
end note

note right of DESTROYED
  DESTROYED and UNLINKED are terminal. The row is kept so that
  deployment records keep a valid reference; a new instance is
  created if the owner needs the resource again.
end note

@enduml
